Added maps slides

--- a/smwcon/2012fall/maps/resources/slides.css
+++ b/smwcon/2012fall/maps/resources/slides.css
@@ -156,10 +156,23 @@
     }
 
 
-img.intehcentre {
-    display: block;
-    margin-left: 40px;
-    top: 50%;
-    margin-top: -50px;
-    position: absolute;
-}
+   img.intehcentre {
+       display: block;
+       margin-left: 40px;
+       top: 50%;
+       margin-top: -50px;
+       position: absolute;
+   }
+
+   img.dafuiq {
+       display: block;
+       margin-left: 275px;
+       top: 50%;
+       margin-top: -125px;
+       position: absolute;
+   }
+
+
+
+
+
