Small additions to component slides

--- a/craftmanship/components/index.html
+++ b/craftmanship/components/index.html
@@ -64,15 +64,15 @@
 
                 <section>
 
-                    <section data-transition="linear">
+                    <section>
                         <h3>What are components?</h3>
                         <p class="fragment">
-                            They are kinda look like boxes<br />
+                            They are kinda like boxes<br />
                             <img src="img/cardboard-box.png" style="border: 0; background: transparent; box-shadow:none" />
                         </p>
                     </section>
 
-                    <section data-transition="linear">
+                    <section>
                         <p>Except that they do stuff</p>
 
                         <img src="img/something-inside.gif" width="500px" />
@@ -108,22 +108,50 @@
                         <p class="fragment">Granule of release is granule of reuse</p>
                         <p class="fragment">Either all reusable or not reusable</p>
                     </section>
+                </section>
 
+                <section>
                     <section>
                         <h3>Cohesion: Common-closure principle</h3>
                         <p class="fragment">Classes that change for the same reason should be in the same component</p>
                         <p class="fragment">SRP extended to components</p>
                     </section>
+                </section>
 
+                <section>
                     <section>
                         <h3>Cohesion: Common-reuse principle</h3>
                         <p class="fragment">Classes that are used together should be in the same component</p>
                         <p class="fragment">Like ISP</p>
                     </section>
+                </section>
 
+                <section>
                     <section>
                         <h3>Forces</h3>
                     </section>
+                </section>
+
+                <section>
+                    <section>
+                        <h3>Coupling: Acyclic dependencies principle</h3>
+                    </section>
+                </section>
+
+                <section>
+                    <section>
+                        <h3>Coupling: Stable-dependencies principle</h3>
+                    </section>
+                </section>
+
+                <section>
+                    <section>
+                        <h3>Coupling: Stable-abstractions principle</h3>
+                    </section>
+                </section>
+
+                <section>
+                    <img src="img/contain-it.gif" />
                 </section>
 
             </div>
