Add last core parts to component slides

--- a/craftmanship/components/index.html
+++ b/craftmanship/components/index.html
@@ -80,10 +80,7 @@
 
                     <section>
                         <h3>What are components?</h3>
-                        <p>Organizational level</p>
-                        <p></p>
-                        <p>EDA, SOA</p>
-                        <img src="img/Component-based-Software-Engineering-example2.gif">
+                        <img src="img/Component-based-Software-Engineering-example2.gif" width="700px">
                     </section>
 
                     <section>
@@ -134,6 +131,10 @@
                     </section>
 
                     <section>
+                        <img src="img/dip.jpg">
+                    </section>
+
+                    <section>
                         <img src="img/dep-graph.png" width="700px">
                     </section>
 
@@ -148,7 +149,9 @@
 
                         <p>Depend in the direction of stability</p>
                     </section>
+                </section>
 
+                <section>
                     <section>
                         <h3>Coupling: Stable-abstractions principle</h3>
 
@@ -190,22 +193,17 @@
                         <p class="fragment">If you use one class from a package, you depend on them all</p>
                         <p class="fragment">Like ISP</p>
                     </section>
-                </section>
-
-                <section>
                     <section>
-                        <h3>Forces</h3>
+                        <img src="img/ISP.jpg">
                     </section>
                 </section>
 
                 <section>
-                    <section>
-                        <p>Component size</p>
-                    </section>
-                </section>
-
-                <section>
-                    <img src="img/contain-it.gif" />
+                    <h3>Things not covered</h3>
+                    <p class="fragment">Interplay of the forces<br /></p>
+                    <p class="fragment">Evolution of components<br /></p>
+                    <p class="fragment">Components in a layered system<br /></p>
+                    <img src="img/contain-it.gif" class="fragment" width="400px" />
                 </section>
 
                 <section>
@@ -214,6 +212,7 @@
                         <li><a href="https://www.goodreads.com/book/show/8686650-continuous-delivery">Continuous delivery</a>, chapter 13 "managing Components and Dependencies"</li>
                         <li><a href="https://www.goodreads.com/book/show/3735293-clean-code">Clean Code</a>, chapter 11 "Systems"</li>
                         <li><a href="https://www.goodreads.com/book/show/3735293-clean-code">Patterns of Enterprise Application Architecture</a>, chapter 1 "Layering"</li>
+                        <li><a href="http://cleancoders.com/category/component-design#videos">Clean Code component design videos</a></li>
                     </ul>
                 </section>
 
