--- a/craftmanship/components/index.html
+++ b/craftmanship/components/index.html
@@ -147,7 +147,7 @@
                     <section data-state="blackout">
                         <h3>Coupling: Stable-dependencies principle</h3>
 
-                        <p>Depend in the direction of stability</p>
+                        <p class="fragment" style="color:lightgreen">Depend in the direction of stability</p>
                     </section>
                 </section>
 
@@ -155,7 +155,7 @@
                     <section data-state="blackout">
                         <h3>Coupling: Stable-abstractions principle</h3>
 
-                        <p>A package should be as abstract as it is stable</p>
+                        <p class="fragment" style="color:lightgreen">A package should be as abstract as it is stable</p>
                     </section>
 
                     <section>
