Component design overview slide

--- a/craftmanship/components/index.html
+++ b/craftmanship/components/index.html
@@ -110,7 +110,7 @@
                         </p>
                         <br />
                         <p class="fragment">
-                            How big should a component be?
+                            Aim: make development and usage as painless as possible
                         </p>
                     </div>
                 </section>
