Fix mistake on SAP slide

--- a/craftmanship/components/index.html
+++ b/craftmanship/components/index.html
@@ -176,7 +176,7 @@
 
                         <p class="fragment" style="color:lightgreen; font-size: large">Allows us to satisfy SDP while depending on abstractions and retaining changeability</p>
 
-                        <p class="fragment">Abstract = # concrete classes / # abstract classes</p>
+                        <p class="fragment">Abstract = # abstract classes / # classes </p>
 
                         <p class="fragment">Stable = # dependents / # components</p>
                     </section>
